# Zallet-Parity-Harness

./: .gitignore  Cargo.toml  DESIGN_NOTE.md  README.md  RUNBOOK.md  Zallet.txt  report.json  report.md
.github/workflows/: ci.yml
crates/zallet-parity-cli/: Cargo.toml
crates/zallet-parity-cli/src/: main.rs
crates/zallet-parity-cli/tests/: cli_tests.rs
crates/zallet-parity-core/: Cargo.toml
crates/zallet-parity-core/src/: client.rs  differ.rs  engine.rs  expected_diffs.rs  lib.rs  manifest.rs  report.rs
crates/zallet-parity-testkit/: Cargo.toml
crates/zallet-parity-testkit/src/: lib.rs
examples/: expected_diffs.toml
reports/: .gitkeep
