[workspace]
members = [
    "crates/zallet-parity-core",
    "crates/zallet-parity-cli",
    "crates/zallet-parity-testkit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2+spec-1.1.0"

# CLI & UX
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
indicatif = "0.18.4"

# Telemetry
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# RPC
jsonrpsee = { version = "0.26.0", features = ["http-client", "macros"] }

# Comparison
assert-json-diff = "2.0.2"

# JSON Pointer (RFC 6901) — for configurable ignore paths
jsonptr = { version = "0.7.1", features = ["json"] }

# Test Mocking
wiremock = "0.6.5"
